# trading_platform

./: .gitignore  README.md
client/: CMakeLists.txt  start.sh  stop.sh  tcp-client-config.json  tcp_client.cpp  tcp_client.h
common/: config_manager.cpp  config_manager.h  id_generator.cpp  id_generator.h  kafka_manager.cpp  kafka_manager.h  logger.cpp  logger.h  mem_mgr.cpp  mem_mgr.h  shm_mgr.cpp  shm_mgr.h  tcp_code.cpp  tcp_code.h  tcp_comm.h  tcp_connect_mgr.cpp  tcp_connect_mgr.h
deploy_script/: init_netparam.sh
gateway_server/: CMakeLists.txt  Makefile  TcpServer.cpp  TcpServer.h  reload.sh  start.sh  stop.sh  tcp_server.cpp  tcp_server.h
order_server/: CMakeLists.txt  order.cpp  order.h  order_processor.cpp  order_processor.h  order_server.cpp  order_server.h  reload.sh  start.sh  stop.sh  user.cpp  user.h  wallet.cpp  wallet.h
proto/: convert.sh
proto/cs_proto/: futures_order.proto  role.proto
proto/include/cs_proto/: role.pb.cpp  role.pb.h
